--- a/src/MK.Accountancy.Blazor/Pages/Index.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Index.razor
@@ -198,7 +198,7 @@
         </DevGridLayout>
     </Authorized>
     <NotAuthorized>
-        <div id="container">
+        <div id="container" style="margin-top:120px">
             <div class="text">
                 <h4>@L["IndexPage_1"]</h4>
                 <h4>@L["IndexPage_2"]</h4>
