--- a/src/MK.Accountancy.Blazor/Pages/Index.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Index.razor
@@ -7,6 +7,7 @@
 @inject AppService AppService
 @inject OrganizationParameterAppService CompanyParameterAppService
 @inject FinancialStatuAppService FinancialStatuAppService
+@inject CompanyAppService CompanyAppService
 
 <AuthorizeView>
     <Authorized>
