--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -54,6 +54,8 @@
 @using MK.Accountancy.PaymentDocuments
 @using MK.Accountancy.Blazor.Pages.PaymentDocuments
 @using MK.Blazor.Core.Components.Commons.Loadings
+@using MK.Accountancy.Companies
+@using MK.Accountancy.Blazor.Pages.Companies
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
