--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -154,9 +154,9 @@
                                     <DxMenuItem Text="@L["CompParameters"]"
                                     Click="()=> AppService.ShowOrganizationParameterEditPage = true"
                                     IconCssClass="fas fa-clipboard-check" />
-                                    <DxMenuItem Text="@L["Companies"]"
+                                    <DxMenuItem Text="@L["Company"]"
                                                 Click="() => AppService.ShowCompanyEditPage = true"
-                                                IconCssClass="fas fa-cog" />
+                                                IconCssClass="fa fa-building" />
                                 </Items>
                             </DxMenuItem>
                         }
