--- a/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevTelephoneEdit.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevTelephoneEdit.razor
@@ -13,7 +13,8 @@
                    Enabled="Enabled"
                    InputCssClass="@InputCssClass"
                    Mask="(000) 000 00 00"
-                   ReadOnly="@ReadOnly">
+                   ReadOnly="@ReadOnly"
+                   >
                    <DxTextMaskProperties Placeholder="'_'" SaveLiteral="true"/>
         </DxMaskedInput>
     </Template>
@@ -37,7 +38,7 @@
     private DxMaskedInput<string> _dxMaskedInput;
     private string _value;
 
-    [Parameter] public override string EditorCssClass { get; set; } = "text-center";
+    [Parameter] public override string EditorCssClass { get; set; }
 
     [Parameter] public EventCallback<string> ValueChanged { get; set; }
     [Parameter] public string Value
